2008-07-18  Thomas Heller  <theller@python.net>

	* comtypes\test\runtests.py: Define a main() function.

2008-05-29  Thomas Heller  <theller@python.net>

	* Improved the [in, out] parameter workaround.  These parameters
	are now optional.  Removed the special codegeneration for [in,
	out] parameters in IEnumXXX.Next methods.  Added test.

2008-05-16  Thomas Heller  <theller@python.net>

	* Provide a workaround for a bug in ctypes. This allows methods
	using [in, out] parameters to correctly convert native Python
	values.

	* comtypes/tools/tlbparser.py: When GetRefTypeInfo(hreftype)
	fails, emit a warning and generate a fake type instead.

2008-05-07  Thomas Heller  <theller@python.net>

	* Fixed the definition of VARIANT.empty and VARIANT.null; the
	values were swapped.
	https://sourceforge.net/tracker/?func=detail&atid=692940&aid=1959722&group_id=115265

2008-04-25  Thomas Heller  <theller@python.net>

	* Replace logger.info() calls with logger.debug() since it is more
	appropriate.

	In comtypes.server.connectionpoints, when a event notification
	fails with an error indicating that the event sink is no longer
	present, close the connection and log a warning.

	The __repr__ of VARIANT changed again to make it a little bit shorter.

	VARIANT instances of VT_BREF are NOT unpacked when the .value
	attribute as accessed. The value instead can be got or set by
	indexing, so the api is the same as for pointer instances:

	  print byref_var[0]
	  byref_var[0] = value


2008-04-17  Thomas Heller  <theller@python.net>

	* More changes merged from upstream svn 26400, add support for
	implementing (non-dual) dispinterfaces (work in progress).

	* Merge in a lot of changes from the private upstream repository
	26394; mainly much better support for implementing comtypes
	servers.

2008-04-09  Thomas Heller  <theller@python.net>

	* Bump version number to 0.4.3a

	* Released version comtypes 0.4.2.

	* comtypes.util: New module, containing the byref_at() and