@@ -3,6 +3,7 @@
 # generated by 'xml2py'
 # flags '..\tools\windows.xml -m comtypes -m comtypes.automation -w -r .*TypeLibEx -r .*TypeLib -o typeinfo.py'
 # then hacked manually
+import os
 import weakref
 
 from ctypes import *
@@ -505,11 +506,26 @@ def CreateTypeLib(filename, syskind=SYS_WIN32):
     _oleaut32.CreateTypeLib2(syskind, c_wchar_p(filename), byref(ctlib))
     return ctlib
 
-def QueryPathOfRegTypeLib(libid, wVerMajor, wVerMinor, lcid=0):
-    "Return the path of a registered type library"
-    pathname = BSTR()
-    _oleaut32.QueryPathOfRegTypeLib(byref(GUID(libid)), wVerMajor, wVerMinor, lcid, byref(pathname))
-    return pathname.value.split("\0")[0]
+if os.name == "ce":
+    # See also:
+    # http://blogs.msdn.com/larryosterman/archive/2006/01/09/510856.aspx
+    #
+    # windows CE does not have QueryPathOfRegTypeLib. Emulate by reading the registry:
+    def QueryPathOfRegTypeLib(libid, wVerMajor, wVerMinor, lcid=0):
+        "Return the path of a registered type library"
+        import _winreg
+        try:
+            hkey = _winreg.OpenKey(_winreg.HKEY_CLASSES_ROOT, r"Typelib\%s\%s.%s\%x\win32" % (libid, wVerMajor, wVerMinor, lcid))
+        except WindowsError:
+            # On CE, some typelib names are not in the ..\win32 subkey:
+            hkey = _winreg.OpenKey(_winreg.HKEY_CLASSES_ROOT, r"Typelib\%s\%s.%s\%x" % (libid, wVerMajor, wVerMinor, lcid))
+        return _winreg.QueryValueEx(hkey, "")[0]
+else:
+    def QueryPathOfRegTypeLib(libid, wVerMajor, wVerMinor, lcid=0):
+        "Return the path of a registered type library"
+        pathname = BSTR()
+        _oleaut32.QueryPathOfRegTypeLib(byref(GUID(libid)), wVerMajor, wVerMinor, lcid, byref(pathname))
+        return pathname.value.split("\0")[0]
 
 ################################################################
 # Structures
